update(font): drop montserrat

--- a/assets/css/general/typography.css
+++ b/assets/css/general/typography.css
@@ -1,6 +1,6 @@
 .hola-body-typography {
   color: var(--hola-text-dark-color);
-  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, "Lantinghei SC",
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lantinghei SC",
     sans-serif;
 }
 
